# ArthJAX

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  PROJECT_SETUP.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml
arthjax/: __init__.py  config.py  contagion.py  macro.py  markets.py  metrics.py  shocks.py  state.py
arthjax/agents/: __init__.py  banks.py  companies.py  households.py
arthjax/benchmarks/: __init__.py  baselines.py  plots.py  stylized_facts.py
arthjax/policy/: __init__.py  presets.py
arthjax/scenarios/: __init__.py  presets.py
arthjax/simulation/: __init__.py  loop.py  step.py
arthjax/viz/: __init__.py  output.py  plots.py  style.py
arthjax/world_model/: __init__.py  data.py  encoder.py  mlp.py  rollout.py  train.py
docs/: ARTHJAX_SHOWCASE.md  BENCHMARKS.md  CONTRIBUTING_ISSUES.md  METHODS.md  ROADMAP.md
notebooks/: README.md  demo.ipynb  kaggle.ipynb  kernel-metadata.json
plots/: README.md
scripts/: README.md  bootstrap_community_issues.py  build_showcase_pdf.py  run_benchmarks.py  run_counterfactual.py  run_monte_carlo.py  run_scenario.py  run_simulation.py  train_world_model.py
tests/: __init__.py  test_baselines.py  test_benchmarks.py  test_policy.py  test_scenarios.py  test_step.py  test_world_model.py
