[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arthjax"
version = "0.4.0"
description = "GPU-accelerated agent-based macro simulator with neural world models in JAX"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "VARUN3WARE" },
]
keywords = ["jax", "economics", "agent-based-model", "macro", "simulation", "world-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/VARUN3WARE/ArthJAX"
Documentation = "https://github.com/VARUN3WARE/ArthJAX/blob/main/docs/ARTHJAX_SHOWCASE.md"
Repository = "https://github.com/VARUN3WARE/ArthJAX"
Issues = "https://github.com/VARUN3WARE/ArthJAX/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["arthjax*"]
